--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: node_js
 node_js:
-  - "latest"
+  - "node"
   - "7"
   - "6"
+
+script:
+ - npm test-travis
+
+after_success:
+    - bash <(curl -s https://codecov.io/bash)
