--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
   - "6"
 
 script:
- - npm test-travis
+ - npm run test-travis
 
 after_success:
     - bash <(curl -s https://codecov.io/bash)
